--- a/microblog/package.json
+++ b/microblog/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "devDependencies": {
     "grunt": "~0.4.5",
+    "grunt-bowercopy": "^1.2.4",
+    "grunt-contrib-clean": "^0.7.0",
+    "grunt-contrib-copy": "^0.8.2",
     "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-nodeunit": "~0.4.1",
     "grunt-contrib-uglify": "~0.5.0"
