--- a/microblog/bower.json
+++ b/microblog/bower.json
@@ -17,6 +17,7 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "~3.3.6"
+    "bootstrap": "~3.3.6",
+    "moment": "momentjs#~2.11.1"
   }
 }
