--- a/microblog/requirements.txt
+++ b/microblog/requirements.txt
@@ -8,7 +8,6 @@ Flask-Babel==0.9
 Flask-Login==0.3.2
 Flask-Mail==0.9.1
 Flask-SQLAlchemy==2.1
-Flask-WhooshAlchemy==0.56
 Flask-WTF==0.12
 flipflop==1.0
 guess-language==0.2
@@ -17,6 +16,7 @@ Jinja2==2.8
 MarkupSafe==0.23
 passlib==1.6.5
 pbr==1.8.1
+psycopg2==2.6.1
 python3-openid==3.0.9
 pytz==2015.7
 six==1.10.0
